Improved Results Feedback

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
 						<button class="btn btn-lg btn-success mx-2" onclick="submit(true)">Submit</button>
 					</div>
 					<div class="switch d-none">
-						<span class="h3 align-middle me-2">Result: <span id="result">100%</span></span>
+						<span class="h3 align-middle me-2">Result: <span id="result"></span></span>
 						<button class="btn btn-lg btn-primary ms-2" onclick="submit(false)">Next</button>
 					</div>
 				</div>
